# penguin-engine

./: .gitignore  CMakeLists.txt  Penguin-Engine-vulkan.sln  README.md
Penguin-Engine-vulkan/: Penguin-Engine-vulkan.vcxproj  Penguin-Engine-vulkan.vcxproj.filters
Penguin-Engine-vulkan/src/: Camera.h  RenderObject.h  Time.h  Transform.cpp  Transform.h  TransformObject.h  VKEngine.h  VKTextureHandling.h  main.cpp  vertexData.h
Penguin-Engine-vulkan/src/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
Penguin-Engine-vulkan/x64/Debug/: Penguin-Engine-vulkan.exe.recipe  Penguin-Engine-vulkan.ilk  vc143.idb
Penguin-Engine-vulkan/x64/Debug/Penguin-.f3ede2e5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Penguin-Engine-vulkan.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
includes/: vk_mem_alloc.h
src/: CMakeLists.txt  Camera.h  RenderObject.h  Time.cpp  Time.h  Transform.cpp  Transform.h  VKEngine.cpp  VKEngine.h  VKInit.h  VKTypes.h  VMAUsage.h  main.cpp
src/pengine/: CMakeLists.txt  CMakeLists.txt_bk
src/pengine/core/: CMakeLists.txt  CMakeLists.txt_bk  camera.cpp  camera.h  constants.h  core_includes.h  random.cpp  random.h  render_object.h  time.cpp  time.h  transform.cpp  transform.h  transform_object.h  utilities.h  window.cpp  window.h
src/pengine/graphics/: CMakeLists.txt
src/pengine/graphics/vk_engine/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_types.h  vk_vertex_data.h  vk_vma_usage.cpp  vk_vma_usage.h
src/shaders/: shader.vert
src/vulkan/: VKEngine.cpp  VKEngine.h  VMAUsage.cpp  VertexData.h
x64/Debug/src/shaders/: frag.spv  vert.spv
